--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,7 @@ add_library(llama
             llama-model-loader.cpp
             llama-model-saver.cpp
             llama-model.cpp
+            llama-statecells.cpp
             llama-quant.cpp
             llama-sampling.cpp
             llama-vocab.cpp
