seeddelta-build: add policy self-test and policy export

--- a/tools/seeddelta-build/CMakeLists.txt
+++ b/tools/seeddelta-build/CMakeLists.txt
@@ -2,6 +2,8 @@ set(TARGET llama-seeddelta-build)
 add_executable(${TARGET}
     seeddelta-build.cpp
     seeddelta_policy.cpp
+    seeddelta_policy_export.cpp
+    seeddelta_policy_selftest.cpp
 )
 target_link_libraries(${TARGET} PRIVATE common llama ${CMAKE_THREAD_LIBS_INIT})
 target_compile_features(${TARGET} PRIVATE cxx_std_17)
