--- a/tools/statecells-build/CMakeLists.txt
+++ b/tools/statecells-build/CMakeLists.txt
@@ -1,9 +1,13 @@
 set(TARGET llama-statecells-build)
-add_executable(${TARGET} statecells-build.cpp)
+add_executable(${TARGET}
+    statecells-build.cpp
+    sc_imatrix.cpp
+    sc_eval.cpp
+)
 target_link_libraries(${TARGET} PRIVATE common llama ${CMAKE_THREAD_LIBS_INIT})
+target_include_directories(${TARGET} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_compile_features(${TARGET} PRIVATE cxx_std_17)
 
 if(LLAMA_TOOLS_INSTALL)
     install(TARGETS ${TARGET} RUNTIME)
 endif()
-
