--- a/tools/statecells-build/CMakeLists.txt
+++ b/tools/statecells-build/CMakeLists.txt
@@ -3,6 +3,7 @@ add_executable(${TARGET}
     statecells-build.cpp
     sc_imatrix.cpp
     sc_eval.cpp
+    sc_report.cpp
 )
 target_link_libraries(${TARGET} PRIVATE common llama ${CMAKE_THREAD_LIBS_INIT})
 target_include_directories(${TARGET} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
