Split statecells CLI and runner

--- a/tools/statecells-build/CMakeLists.txt
+++ b/tools/statecells-build/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(TARGET llama-statecells-build)
 add_executable(${TARGET}
     statecells-build.cpp
+    sc_cli.cpp
+    sc_runner.cpp
     sc_imatrix.cpp
     sc_eval.cpp
     sc_report.cpp
