--- a/tools/statecells-build/CMakeLists.txt
+++ b/tools/statecells-build/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(${TARGET}
     sc_encode.cpp
     sc_eval.cpp
     sc_utils.cpp
+    sc_process.cpp
     sc_report.cpp
 )
 target_link_libraries(${TARGET} PRIVATE common llama ${CMAKE_THREAD_LIBS_INIT})
