Factor seeddelta runner utilities

--- a/tools/seeddelta-build/CMakeLists.txt
+++ b/tools/seeddelta-build/CMakeLists.txt
@@ -2,6 +2,7 @@ set(TARGET llama-seeddelta-build)
 add_executable(${TARGET}
     seeddelta-build.cpp
     sd_cli.cpp
+    sd_utils.cpp
     sd_runner.cpp
     seeddelta_policy.cpp
     seeddelta_policy_export.cpp
