--- a/tools/seeddelta-build/selftest/CMakeLists.txt
+++ b/tools/seeddelta-build/selftest/CMakeLists.txt
@@ -1,6 +1,11 @@
 set(TEST_TARGET llama-seeddelta-selftest)
 add_executable(${TEST_TARGET}
     sd_selftest.cpp
+    ../seeddelta_policy.cpp
+    ../sd_policy_resolve.cpp
+    ../sd_report.cpp
 )
 target_link_libraries(${TEST_TARGET} PRIVATE common llama ${CMAKE_THREAD_LIBS_INIT})
-target_include_directories(${TEST_TARGET} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
+target_include_directories(${TEST_TARGET} PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/..
+    ${CMAKE_CURRENT_SOURCE_DIR}/../include)
